# ollama-chat

./: .gitignore  FILE_UPLOAD_USAGE.md  FULL_DOCUMENT_INDEXING.md  README.md  ollama_chat.py  pyproject.toml  requirements.txt
chroma_data/: chroma.sqlite3
mcp-server/: .gitignore  CONFIGURATION.md  QUICKSTART.md  README.md  index.js  package.json
mcp-server/test_docs/: mcp_overview.md  (+1 more)
ollama_chat_lib/: __init__.py  agent.py  constants.py  conversation.py  document_indexer.py  file_ops.py  io_hooks.py  llm_core.py  memory.py  model_selection.py  plugin_manager.py  run_helpers.py  splitters.py  state.py  text_extraction.py  tools.py  utils.py  vector_db.py  web_crawler.py
plugins/: plugin_sample.py  plugin_weather_sample_tool.py  rss_feed.txt  rss_reader.py
plugins.samples/: __init__.py  agent_plugin.py  calendars_config.json.sample  ecoledirecte_2fa_data.json  ecoledirecte_homework_plugin.py  google_calendar_plugin.py  msteams_transcript_converter_plugin.py  outlook_calendar_plugin.py  outlook_folders.json  outlook_plugin.py  plugin_exif_faces_location.py  plugin_ical_reader.py  plugin_idea_generator.py  plugin_rss_reader.py  plugin_sample.py  plugin_send_email.py  plugin_simple_web_interface.py  plugin_text_to_speech.py  plugin_weather_sample_tool.py  rss_reader.py  speech_to_text_plugin.py
tests/: conftest.py  test_cli.py  test_conversation.py  test_document_helpers.py  test_file_ops.py  test_hooks.py  test_llm_core.py  test_memory.py  test_model_selection.py  test_plugins.py  test_splitters.py  test_tools.py  test_utils.py  test_vector_db.py  test_web.py
